src/language.output
Terminals unused in grammar

   SUBTRACT


State 111 conflicts: 1 shift/reduce
State 112 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input statement
    3      | input block
    4      | input error

    5 block: OPEN_SCOPE input CLOSE_SCOPE

    6 statement: exp SEMICOLON
    7          | RETURN_KEYWORD exp SEMICOLON
    8          | TYPE var_list SEMICOLON
    9          | function_decl
   10          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN statement
   11          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN statement ELSE_KEYWORD statement
   12          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN block
   13          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN block ELSE_KEYWORD block
   14          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN statement ELSE_KEYWORD block
   15          | IF_KEYWORD OPEN_PAREN exp CLOSE_PAREN block ELSE_KEYWORD statement
   16          | FOR_KEYWORD OPEN_PAREN exp SEMICOLON exp SEMICOLON exp CLOSE_PAREN block
   17          | FOR_KEYWORD OPEN_PAREN exp SEMICOLON exp SEMICOLON exp CLOSE_PAREN statement
   18          | DO_KEYWORD block WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN SEMICOLON
   19          | DO_KEYWORD statement WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN SEMICOLON
   20          | WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN block
   21          | WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN statement

   22 var_list: var_list_ele
   23         | var_list COMMA var_list_ele

   24 var_list_ele: VAR
   25             | VAR ASSIGNMENT_OP exp

   26 function_decl: FUNCTION_KEYWORD VAR OPEN_PAREN param_list CLOSE_PAREN block

   27 param_list: %empty
   28           | param_list_ele
   29           | param_list COMMA param_list_ele

   30 param_list_ele: TYPE VAR

   31 function_call: VAR OPEN_PAREN exp_list CLOSE_PAREN
   32              | VAR OPEN_PAREN exp CLOSE_PAREN

   33 exp_list: %empty
   34         | exp COMMA exp
   35         | exp_list COMMA exp

   36 variable: VAR
   37         | variable OPEN_ARRAY_INDEX exp CLOSE_ARRAY_INDEX

   38 exp: STRING
   39    | FLOAT
   40    | variable
   41    | INT
   42    | variable ASSIGNMENT_OP exp
   43    | exp EQUAL exp
   44    | exp NOTEQUAL exp
   45    | exp LESSTHAN exp
   46    | exp LESSTHANEQUAL exp
   47    | exp GREATERTHAN exp
   48    | exp GREATERTHANEQUAL exp
   49    | exp ADD exp
   50    | NEGATIVE exp
   51    | NOT exp
   52    | exp NEGATIVE exp
   53    | exp DIVIDE exp
   54    | exp MULTIPLY exp
   55    | exp POWER exp
   56    | exp MOD exp
   57    | exp AND exp
   58    | exp OR exp
   59    | UNI_OPERATOR variable
   60    | variable UNI_OPERATOR
   61    | function_call
   62    | OPEN_PAREN exp CLOSE_PAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 4
FLOAT (258) 39
INT (259) 41
STRING (260) 38
ASSIGNMENT_OP (261) 25 42
VAR (262) 24 25 26 30 31 32 36
TYPE (263) 8 30
SEMICOLON (264) 6 7 8 16 17 18 19
COMMA (265) 23 29 34 35
ADD (266) 49
SUBTRACT (267)
MULTIPLY (268) 54
DIVIDE (269) 53
POWER (270) 55
MOD (271) 56
NEGATIVE (272) 50 52
NOT (273) 51
UNI_OPERATOR (274) 59 60
OPEN_SCOPE (275) 5
CLOSE_SCOPE (276) 5
OPEN_PAREN (277) 10 11 12 13 14 15 16 17 18 19 20 21 26 31 32 62
CLOSE_PAREN (278) 10 11 12 13 14 15 16 17 18 19 20 21 26 31 32 62
OPEN_ARRAY_INDEX (279) 37
CLOSE_ARRAY_INDEX (280) 37
FUNCTION_KEYWORD (281) 26
RETURN_KEYWORD (282) 7
IF_KEYWORD (283) 10 11 12 13 14 15
ELSE_KEYWORD (284) 11 13 14 15
WHILE_KEYWORD (285) 18 19 20 21
DO_KEYWORD (286) 18 19
FOR_KEYWORD (287) 16 17
EQUAL (288) 43
NOTEQUAL (289) 44
GREATERTHAN (290) 47
LESSTHAN (291) 45
GREATERTHANEQUAL (292) 48
LESSTHANEQUAL (293) 46
AND (294) 57
OR (295) 58


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
input (42)
    on left: 1 2 3 4, on right: 0 2 3 4 5
block (43)
    on left: 5, on right: 3 12 13 14 15 16 18 20 26
statement (44)
    on left: 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21, on right:
    2 10 11 14 15 17 19 21
var_list (45)
    on left: 22 23, on right: 8 23
var_list_ele (46)
    on left: 24 25, on right: 22 23
function_decl (47)
    on left: 26, on right: 9
param_list (48)
    on left: 27 28 29, on right: 26 29
param_list_ele (49)
    on left: 30, on right: 28 29
function_call (50)
    on left: 31 32, on right: 61
exp_list (51)
    on left: 33 34 35, on right: 31 35
variable (52)
    on left: 36 37, on right: 37 40 42 59 60
exp (53)
    on left: 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55
    56 57 58 59 60 61 62, on right: 6 7 10 11 12 13 14 15 16 17 18
    19 20 21 25 32 34 35 37 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 62


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . statement
    3      | input . block
    4      | input . error

    $end              shift, and go to state 2
    error             shift, and go to state 3
    FLOAT             shift, and go to state 4
    INT               shift, and go to state 5
    STRING            shift, and go to state 6
    VAR               shift, and go to state 7
    TYPE              shift, and go to state 8
    NEGATIVE          shift, and go to state 9
    NOT               shift, and go to state 10
    UNI_OPERATOR      shift, and go to state 11
    OPEN_SCOPE        shift, and go to state 12
    OPEN_PAREN        shift, and go to state 13
    FUNCTION_KEYWORD  shift, and go to state 14
    RETURN_KEYWORD    shift, and go to state 15
    IF_KEYWORD        shift, and go to state 16
    WHILE_KEYWORD     shift, and go to state 17
    DO_KEYWORD        shift, and go to state 18
    FOR_KEYWORD       shift, and go to state 19

    block          go to state 20
    statement      go to state 21
    function_decl  go to state 22
    function_call  go to state 23
    variable       go to state 24
    exp            go to state 25


State 2

    0 $accept: input $end .

    $default  accept


State 3

    4 input: input error .

    $default  reduce using rule 4 (input)


State 4

   39 exp: FLOAT .

    $default  reduce using rule 39 (exp)


State 5

   41 exp: INT .

    $default  reduce using rule 41 (exp)


State 6

   38 exp: STRING .

    $default  reduce using rule 38 (exp)


State 7

   31 function_call: VAR . OPEN_PAREN exp_list CLOSE_PAREN
   32              | VAR . OPEN_PAREN exp CLOSE_PAREN
   36 variable: VAR .

    OPEN_PAREN  shift, and go to state 26

    $default  reduce using rule 36 (variable)


State 8

    8 statement: TYPE . var_list SEMICOLON

    VAR  shift, and go to state 27

    var_list      go to state 28
    var_list_ele  go to state 29


State 9

   50 exp: NEGATIVE . exp

    FLOAT         shift, and go to state 4
    INT           shift, and go to state 5
    STRING        shift, and go to state 6
    VAR           shift, and go to state 7
    NEGATIVE      shift, and go to state 9
    NOT           shift, and go to state 10
    UNI_OPERATOR  shift, and go to state 11
    OPEN_PAREN    shift, and go to state 13

    function_call  go to state 23
    variable       go to state 24
    exp            go to state 30


State 10

   51 exp: NOT . exp

    FLOAT         shift, and go to state 4
    INT           shift, and go to state 5
    STRING        shift, and go to state 6
    VAR           shift, and go to state 7
    NEGATIVE      shift, and go to state 9
    NOT           shift, and go to state 10
    UNI_OPERATOR  shift, and go to state 11
    OPEN_PAREN    shift, and go to state 13

    function_call  go to state 23
    variable       go to state 24
    exp            go to state 31


State 11

   59 exp: UNI_OPERATOR . variable

    VAR  shift, and go to state 32

    variable  go to state 33


State 12

    5 block: OPEN_SCOPE . input CLOSE_SCOPE

    $default  reduce using rule 1 (input)

    input  go to state 34


State 13

   62 exp: OPEN_PAREN . exp CLOSE_PAREN

    FLOAT         shift, and go to state 4
    INT           shift, and go to state 5
    STRING        shift, and go to state 6
    VAR           shift, and go to state 7
    NEGATIVE      shift, and go to state 9
    NOT           shift, and go to state 10
    UNI_OPERATOR  shift, and go to state 11
    OPEN_PAREN    shift, and go to state 13

    function_call  go to state 23
    variable       go to state 24
    exp            go to state 35


State 14

   26 function_decl: FUNCTION_KEYWORD . VAR OPEN_PAREN param_list CLOSE_PAREN block

    VAR  shift, and go to state 36


State 15

    7 statement: RETURN_KEYWORD . exp SEMICOLON

    FLOAT         shift, and go to state 4
    INT           shift, and go to state 5
    STRING        shift, and go to state 6
    VAR           shift, and go to state 7
    NEGATIVE      shift, and go to state 9
    NOT           shift, and go to state 10
    UNI_OPERATOR  shift, and go to state 11
    OPEN_PAREN    shift, and go to state 13

    function_call  go to state 23
    variable       go to state 24
    exp            go to state 37


State 16

   10 statement: IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN statement
   11          | IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN statement ELSE_KEYWORD statement
   12          | IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN block
   13          | IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN block ELSE_KEYWORD block
   14          | IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN statement ELSE_KEYWORD block
   15          | IF_KEYWORD . OPEN_PAREN exp CLOSE_PAREN block ELSE_KEYWORD statement

    OPEN_PAREN  shift, and go to state 38


State 17

   20 statement: WHILE_KEYWORD . OPEN_PAREN exp CLOSE_PAREN block
   21          | WHILE_KEYWORD . OPEN_PAREN exp CLOSE_PAREN statement

    OPEN_PAREN  shift, and go to state 39


State 18

   18 statement: DO_KEYWORD . block WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN SEMICOLON
   19          | DO_KEYWORD . statement WHILE_KEYWORD OPEN_PAREN exp CLOSE_PAREN SEMICOLON

    FLOAT             shift, and go to state 4
    INT               shift, and go to state 5
    STRING            shift, and go to state 6
    VAR               shift, and go to state 7
    TYPE              shift, and go to state 8
    NEGATIVE          shift, and go to state 9
    NOT               shift, and go to state 10
    UNI_OPERATOR      shift, and go to state 11
    OPEN_SCOPE        shift, and go to state 12
    OPEN_PAREN        shift, and go to state 13
    FUNCTION_KEYWORD  shift, and go to state 14
    RETURN_KEYWORD    shift, and go to state 15
    IF_KEYWORD        shift, and go to state 16
    WHILE_KEYWORD     shift, and go to state 17
    DO_KEYWORD        shift, and go to state 18
    FOR_KEYWORD       shift, and go to state 19

    block          go to state 40
    statement      go to state 41
    function_decl  go to state 22
    function_call  go to state 23
    variable       go to state 24
    exp            go to state 25


State 19

   16 statement: FOR_KEYWORD . OPEN_PAREN exp SEMICOLON exp SEMICOLON exp CLOSE_PAREN block
   17          | FOR_KEYWORD . OPEN_PAREN exp SEMICOLON exp SEMICOLON exp CLOSE_PAREN statement

    OPEN_PAREN  shift, and go to state 42


State 20

    3 input: input block .

    $default  reduce using rule 3 (input)


State 21

    2 input: input statement .

    $default  reduce using rule 2 (input)


State 22

    9 statement: function_decl .

    $default  reduce using rule 9 (statement)


State 23

   61 exp: function_call .

    $default  reduce using rule 61 (exp)


State 24

   37 variable: variable . OPEN_ARRAY_INDEX exp CLOSE_ARRAY_INDEX
   40 exp: variable .
   42    | variable . ASSIGNMENT_OP exp
   60    | variable . UNI_OPERATOR

    ASSIGNMENT_OP     shift, and go to state 43
    UNI_OPERATOR      shift, and go to state 44
    OPEN_ARRAY_INDEX  shift, and go to state 45

    $default  reduce using rule 40 (exp)


State 25

    6 statement: exp . SEMICOLON
   43 exp: exp . EQUAL exp
   44    | exp . NOTEQUAL exp
   45    | exp . LESSTHAN exp
   46    | exp . LESSTHANEQUAL exp
   47    | exp . GREATERTHAN exp
   48    | exp . GREATERTHANEQUAL exp
   49    | exp . ADD exp
   52    | exp . NEGATIVE exp
   53    | exp . DIVIDE exp
   54    | exp . MULTIPLY exp
   55    | exp . POWER exp
   56    | exp . MOD exp
   57    | exp . AND exp
   58    | exp . OR exp
